<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogFragmentSaveTimer"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:minWidth="280dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="5dp"
        android:text="@string/saveTimerDialogTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialogSaveTimerTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/saveTimerDialogMessage"
        android:inputType="textPersonName"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogSaveTimerCancelButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/saveTimerDialogCancelButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogSaveTimerOkButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/saveTimerDialogOkButton" />
    </LinearLayout>

</LinearLayout>