<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutKeyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkThemeColorPrimary">

    <TextView
        android:id="@+id/keyboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/displayTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Text text" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="317dp"
        android:layout_height="271dp"
        android:gravity="center|center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayTextView"
        app:layout_constraintVertical_bias="0.75">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/keyboardButton1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton1"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/keyboardButton2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton2"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/keyboardButton3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton3"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/keyboardButton4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton4"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/keyboardButton5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton5"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/keyboardButton6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton6"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/keyboardButton7"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton7"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/keyboardButton8"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton8"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/keyboardButton9"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton9"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/keyboardButton0"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darkThemeColorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="onClickKeyboardButton"
                    android:text="@string/keyboardButton0"
                    android:textColor="@color/fontColor"
                    android:textSize="36sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/displayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <Button
        android:id="@+id/keyboardButtonOk"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:elevation="0dp"
        android:onClick="onClickKeyboardButton"
        android:text="@string/keyboardButtonOk"
        android:textColor="@color/darkThemeColorSecondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/keyboardButtonCancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="onClickKeyboardButton"
        android:text="@string/keyboardButtonCancel"
        android:textColor="@color/darkThemeColorSecondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/keyboardButtonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:clickable="true"
        android:elevation="0dp"
        android:onClick="onClickKeyboardButton"
        app:backgroundTint="@color/darkThemeColorPrimary"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintStart_toEndOf="@+id/displayTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_delete" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="130dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/hintMinutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hintMinutes"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/displayTextView"
        app:layout_constraintTop_toTopOf="@+id/displayTextView" />

    <TextView
        android:id="@+id/hintSecondsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:text="@string/hintSeconds"
        app:layout_constraintEnd_toEndOf="@+id/displayTextView"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/displayTextView" />

    <TextView
        android:id="@+id/hintNumbersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/hintNumbers"
        app:layout_constraintEnd_toEndOf="@+id/displayTextView"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/displayTextView"
        app:layout_constraintTop_toTopOf="@+id/displayTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>