<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentOneExercise">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?attr/dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="middle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/numberOfRoundsConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/data_layouts_height">

                <Button
                    android:id="@+id/numberOfRoundsButtonSE"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/numberOfRoundsButtonDefaultValue"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/numberOfRoundsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/numberOfRoundsText"
                    android:textColor="@color/fontColorDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/numberOfExercisesConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/data_layouts_height">

                <Button
                    android:id="@+id/numberOfExercisesButtonSE"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/numberOfExercisesButtonDefaultValue"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/numberOfExercisesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/numberOfExercisesText"
                    android:textColor="@color/fontColorDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/timeOfWorkConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/data_layouts_height">

                <Button
                    android:id="@+id/timeOfWorkButtonSE"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/timeOfWorkButtonDefaultValue"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timeOfWorkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/timeOfWorkText"
                    android:textColor="@color/fontColorDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/timeOfRestBetweenExercisesConstraintLayoutSE"
                android:layout_width="match_parent"
                android:layout_height="@dimen/data_layouts_height">

                <Button
                    android:id="@+id/timeOfRestBetweenExercisesButtonSE"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/timeOfRestBetweenExercisesButtonDefaultValue"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timeOfRestBetweenExercisesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/timeOfRestBetweenExercisesText"
                    android:textColor="@color/fontColorDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/timeOfRestBetweenRoundsConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/data_layouts_height">

                <Button
                    android:id="@+id/timeOfRestBetweenRoundsButtonSE"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/timeOfRestBetweenRoundsButtonDefaultValue"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timeOfRestBetweenRoundsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/timeOfRestBetweenRoundsText"
                    android:textColor="@color/fontColorDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/additionalOptionsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/data_layouts_height"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/additionalOptionsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/additionalOptions"
                    android:textColor="@color/fontColorDark" />

                <TextView
                    android:id="@+id/delayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/fontColor"
                    tools:text="Start in " />

                <SeekBar
                    android:id="@+id/delaySeekBar"

                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="10dp"
                    android:max="15"
                    android:progress="3"
                    android:theme="@style/SeekBarStyle" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_for_fab_height" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>